Restrict how much we auto-respond
Summary:
We only want to auto-respond to the first email in a thread to new-projects, and we figure that out by checking the In-Reply-To header. If the message has the header, we ignore it. If not, we try to process it. Relatedly, we remember to tack this header on to our own auto-response.

Tangentially related, we don't auto-respond if the original message has no project doc links.

Test Plan:
I'm not sure how to test the in-reply-to locally without a lot more thorough unit testing than I'm willing to do right now. :) The local inbound mail UI doesn't let us specify headers.

Visiting localhost:8000/mail, I sent a mail to new-projects@khan-big-board.appspotmail.com that had no doc links, and I checked the logs to confirm that it was ignored.

Reviewers: ben

Reviewed By: ben

Differential Revision: https://phabricator.khanacademy.org/D20032

--- a/templates/email_content.html
+++ b/templates/email_content.html
@@ -82,16 +82,11 @@
                 <img src="https://www.khanacademy.org/images/avatars/piceratops-ultimate.png" alt=""
                     style="width: 40px; padding-top: 5px;">
             </td>
-            <td>
-                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color: #666; margin: 0 0 10px; color: #333; font-size: 12px;
-                        margin-bottom: 2px;">
+            <td style="vertical-align: middle;">
+                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; color: #666; margin: 0 0 10px; color: #333; margin-bottom: 2px;">
                     <strong>
-                        <a href="{{ card['url'] }}" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 16px; color: #678d00; text-decoration: none; text-decoration: underline; color: #333;
-                                font-size: 12px;">{{ card['name'] }}</a>
+                        <a href="{{ card['url'] }}" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; color: #678d00; text-decoration: underline; color: #333;">{{ card['name'] }}</a>
                     </strong>
-                </p>
-                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color: #666; margin: 0 0 10px; color: #333; font-size: 14px;">
-                    Blah blah blah blah this should be the snippet / problem statement / objective.
                 </p>
             </td>
         </tr>
