Move google + trello hacking over to a task queue
Summary: Finding cards, creating cards, editing docs... these all take time, and now they take time in a task queue!

Test Plan:
Our fancy tests at:
python testrunner.py ~/khan/webapp/third_party/frankenserver .

Our manual fancy test at:
localhost:8000/mail

From: marcia@khanacademy.org
To: new-projects@khan-big-board.appspotmail.com
Subject: "Here is my awesome project doc"

Body linking to this: https://docs.google.com/document/d/1oIiQfAqvmCZKFn5SZDKjvRUjeT4cz6QkE0NkxrRpZ30/edit

Hit "Send email" and then check my ka email for the lovely auto response!

Reviewers: ben

Reviewed By: ben

Differential Revision: https://phabricator.khanacademy.org/D20042

--- a/templates/email_content.html
+++ b/templates/email_content.html
@@ -55,7 +55,7 @@
         cellpadding="0" cellspacing="0" width="600"
         style="width: 600px; padding: 50px;"
         >
-        {% for card in new_cards %}
+        {% for card in cards %}
         <!-- spacer -->
         <tr>
             <td colspan="2">
