Use random avatars instead because they're cute
Test Plan:
localhost:8000/mail
From: marcia@khanacademy.org
To:new-projects@khan-big-board.appspotmail.com
Body:
  Q&A
  https://docs.google.com/a/khanacademy.org/document/d/13xc23OkH7I2j7qV2qMAXCqtFBcd733VjnIl8koGt5is/edit#heading=h.v70525s9mysj

  template:
  https://docs.google.com/document/d/1oIiQfAqvmCZKFn5SZDKjvRUjeT4cz6QkE0NkxrRpZ30/edit

  grammar:
  https://docs.google.com/document/d/1OoKBOk_i7hkNKbMLvd9uR8MAao8OkFVeWaYxIvbUFqI/edit

  Learnstorm:
  https://docs.google.com/document/d/1P-o1vjc8CMoHJwJ6_hKLdhkv_V-wsFhZ3V7YRMKdj4A/edit#heading=h.gjdgxs

  firewall
  https://docs.google.com/document/d/1fOyzqxpEacrPF3eHedQ7j7a5I7Gr9MLDoB-vFaYGkJQ/edit#

Looks cute!
https://s3.amazonaws.com/uploads.hipchat.com/6574/17223/7uLN0leJgSy0XJN/upload.png

Reviewers: ben

Reviewed By: ben

Differential Revision: https://phabricator.khanacademy.org/D20051

--- a/templates/email_content.html
+++ b/templates/email_content.html
@@ -65,11 +65,11 @@
 
         <tr style="vertical-align: top;">
             <td style="padding-right: 20px;">
-                <img src="https://www.khanacademy.org/images/avatars/piceratops-ultimate.png" alt=""
-                    style="width: 40px; padding-top: 5px;">
+                <img src="{{ card['image_url'] }}" alt=""
+                    style="width: 50px; padding-top: 5px;">
             </td>
             <td style="vertical-align: middle;">
-                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; color: #666; margin: 0 0 10px; color: #333; margin-bottom: 2px;">
+                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; margin: 0 0 10px; color: #1C758A; margin-bottom: 2px;">
                     <strong>
                         <a href="{{ card['url'] }}" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; color: #678d00; text-decoration: underline; color: #333;">{{ card['name'] }}</a>
                         {% if not card['already_existed'] %}
