Change the color for reals
Test Plan:
Wee!

--- a/templates/email_content.html
+++ b/templates/email_content.html
@@ -69,9 +69,9 @@
                     style="width: 50px; padding-top: 5px;">
             </td>
             <td style="vertical-align: middle;">
-                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; margin: 0 0 10px; color: #1C758A; margin-bottom: 2px;">
+                <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; margin: 0 0 10px; margin-bottom: 2px;">
                     <strong>
-                        <a href="{{ card['url'] }}" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; color: #678d00; text-decoration: underline; color: #333;">{{ card['name'] }}</a>
+                        <a href="{{ card['url'] }}" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; text-decoration: underline; color: #1C758A;">{{ card['name'] }}</a>
                         {% if not card['already_existed'] %}
                         <span style="text-transform: uppercase; vertical-align: super; font-size: 10px; color: #639b24;">new!
                         </span>
