Refine contents of and tests for retrospective reminder emails.
Test Plan: ship to prod, move https://trello.com/c/vj7RC8T5/157-monkey-swing from big-board to completed-board, make sure ben@ka.org gets an email w/ proper contents

Reviewers: marcia

Differential Revision: https://phabricator.khanacademy.org/D20066

--- a/templates/retrospective_reminder_email_content.html
+++ b/templates/retrospective_reminder_email_content.html
@@ -11,7 +11,7 @@
 <html lang="en">
 <head>
     {# TODO(marcia): Not sure how this title appears yet. #}
-    <title>Thanks for proposing a project!</title>
+    <title>Retro reminder!</title>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <style>
@@ -72,11 +72,11 @@
             <td style="vertical-align: middle;">
                 <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; line-height: 24px; margin: 0 0 10px; margin-bottom: 2px;">
                     <strong>
-                        <a href="https://docs.google.com/document/d/1gbejuiityqZR9LDq-tyJGL0RHkAbCFe9Wc5IULPSQqw/edit" target="_blank" style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; text-decoration: underline; color: #1C758A;">Check out your fancy pre-retro doc</a>
+                        <span style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 20px; color: #000000;">...good, cuz I'm the Retro Raccoon, and that's what I do.</span>
                     </strong>
                 </p>
                 <p style="font-family: 'Helvetica Neue', Calibri, Helvetica, Arial, sans-serif; font-size: 10px; line-height: 24px; color: #bbb; margin: 0 0 10px; margin-bottom: 2px;">
-                    Schedule your retro, send out the doc, and you're good to go!
+                    I'll automatically create your retro doc, all you've gotta do is fill it out w/ your team.
                 </p>
             </td>
         </tr>
