--- a/templates/retrospective_reminder_email_content.html
+++ b/templates/retrospective_reminder_email_content.html
@@ -66,7 +66,7 @@
 
         <tr style="vertical-align: top;">
             <td>
-                <img src="khan-big-board.appspot.com/images/retro-raccoon.png" alt=""
+                <img src="http://khan-big-board.appspot.com/images/retro-raccoon.png" alt=""
                     style="width: 50px; padding-top: 5px;">
             </td>
             <td style="vertical-align: middle;">
